Allocate more memory for utility process histograms.

The network service is a utility process, and runs out of histogram
memory when it's enabled.

Bug: 752565
Change-Id: Ic05d130bca971c6b1268715d0fb1ae519beab954
Reviewed-on: https://chromium-review.googlesource.com/603774
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Brian White <bcwhite@chromium.org>
Commit-Queue: Matt Menke <mmenke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#492460}
Former-commit-id: e5bc4a56c8ac0317d09a3b7a1e0b189d5b5fc580