content/browser/browser_child_process_host_impl.cc
@@ -469,7 +469,8 @@ void BrowserChildProcessHostImpl::CreateMetricsAllocator() {
   base::StringPiece metrics_name;
   switch (data_.process_type) {
     case PROCESS_TYPE_UTILITY:
-      memory_size = 64 << 10;  // 64 KiB
+      // This needs to be larger for the network service.
+      memory_size = 256 << 10;  // 256 KiB
       metrics_name = "UtilityMetrics";
       break;
 
